testdata/bad/timestamp_63.ion
2004-12-11T12:10:11-88:110
